<resources>
    <string name="app_name" translatable="false">QuizMaster</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet? <b>Sign Up</b></string>
    <string name="already_registered_sign_in">Already Registered? <b>Sign In</b></string>
    <string name="quiz_master" translatable="false">Quiz Master</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_username_signup">Enter your Username</string>
    <string name="enter_your_email_signup">Enter your Email</string>
    <string name="enter_your_password_signup">"Enter your password"</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="i_have_read_and_agree_with_the_terms_and_conditions">I have read and agree with the terms and conditions.</string>
    <string name="quiz_setup_text">Quiz</string>
    <string name="history_setup_text">History</string>
    <string name="username_setup_page">Username</string>
    <string name="setup_your_quiz_text">SetUp Your Quiz</string>
    <string name="choose_your_quiz_text">Choose Your Quiz</string>
    <string name="category">Category</string>
    <string name="level">Level</string>
    <string name="questions">Questions</string>
    <string name="image">image</string>
    <string name="play">Play</string>
    <string name="confirm_your_password_signup">Confirm your Password</string>
    <string name="language">EN / HI</string>
    <string name="history">History</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer <b>Sign In</b></string>
    <string name="navigation_drawer_close">Close navigation drawer <b>Sign In</b></string>
    <string name="user_name">User Name</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="timer">Timer: %d</string>
    <string name="stop_quiz">Stop Quiz</string>
    <string name="home">Home</string>
    <string name="view_result">View Result</string>
    <string name="level_qp">Level: %s</string>
    <string name="logo_description" translatable="false">Quiz Master Logo</string>
    <string name="your_result">Your Result</string>
    <string name="question" translatable="false">Q:</string>
    <string name="your_answer">Your answer:</string>
    <string name="correct_answer">Correct answer:</string>
    <string name="language_menu">EN/हिन्दी</string>
    <string name="startLanguage" translatable="false">EN/हिन्दी</string>
    <string name="date">Date</string>
    <string name="score">score</string>
    <string name="emailError">Please enter a valid email</string>
    <string name="passwordError">"Please enter a valid password"</string>
    <string name="error">"Something went wrong"</string>
    <string name="notFound">"Sorry, we could not find your account"</string>
    <string name="emailSend">"Email sent to"</string>
    <string name="ok">"OK"</string>

</resources>